--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
-  author: your name
-  description: your description
-  company: your company (optional)
+  author: Trey Brister
+  description: Mysql Import from SQL
+  company: Boonyah / webstandardcss
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -118,8 +118,8 @@ galaxy_info:
   #  - 9.1
   #  - 9.2
   #  - 9.3
-  #- name: Ubuntu
-  #  versions:
+  - name: Ubuntu
+    versions:
   #  - all
   #  - lucid
   #  - maverick
@@ -133,7 +133,7 @@ galaxy_info:
   #  - utopic
   #  - vivid
   #  - wily
-  #  - xenial
+     - xenial
   #- name: Debian
   #  versions:
   #  - all
@@ -195,7 +195,15 @@ galaxy_info:
   #  - all
   #  - Any
 
-  galaxy_tags: []
+  galaxy_tags: 
+    - mysql
+    - import
+    - sql
+    - gz
+    - mysqldump
+    - ubuntu
+    - database
+    - db
     # List tags for your role here, one per line. A tag is
     # a keyword that describes and categorizes the role.
     # Users find roles by searching for tags. Be sure to
